--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "unplugin-auto-import": "^0.11.2",
     "unplugin-vue-components": "^0.22.4",
     "vue": "^3.2.37",
+    "vue-jsonp": "^2.0.0",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
