--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/file-saver": "^2.0.5",
     "autoprefixer": "^10.4.5",
     "axios": "^0.27.2",
     "element-plus": "^2.2.15",
+    "file-saver": "^2.0.5",
     "mockjs": "^1.1.0",
     "pinia": "^2.0.21",
     "pinia-plugin-persist": "^1.0.0",
