--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "pinia-plugin-persist": "^1.0.0",
     "postcss": "^8.4.16",
     "sass": "^1.54.5",
+    "animate.css": "^4.1.1",
     "scss": "^0.2.4",
     "tailwindcss": "^3.1.8",
     "unplugin-auto-import": "^0.11.2",
