--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
   },
   "dependencies": {
     "@types/file-saver": "^2.0.5",
+    "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.5",
     "axios": "^0.27.2",
     "element-plus": "^2.2.15",
     "file-saver": "^2.0.5",
+    "js-base64": "^3.7.2",
     "mockjs": "^1.1.0",
     "pinia": "^2.0.21",
     "pinia-plugin-persist": "^1.0.0",
     "postcss": "^8.4.16",
     "sass": "^1.54.5",
-    "animate.css": "^4.1.1",
     "scss": "^0.2.4",
     "tailwindcss": "^3.1.8",
     "unplugin-auto-import": "^0.11.2",
