--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/file-saver": "^2.0.5",
+    "@vueuse/core": "^9.3.0",
     "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.5",
     "axios": "^0.27.2",
