--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/file-saver": "^2.0.5",
     "@vueuse/components": "^9.3.0",
     "@vueuse/core": "^9.3.0",
+    "@vueuse/math": "^9.3.0",
     "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.5",
     "axios": "^0.27.2",
