--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
     "esModuleInterop": true,
     "lib": [
       "ESNext",
-      "DOM"
+      "DOM",
+      "WebWorker"
     ],
     "skipLibCheck": true,
     "baseUrl": ".",
