--- a/package.json
+++ b/package.json
@@ -33,10 +33,19 @@
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.40.1",
+    "@typescript-eslint/parser": "^5.40.1",
     "@vitejs/plugin-vue": "^3.0.3",
+    "eslint": "^8.25.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.6.0",
+    "prettier": "^2.7.1",
     "typescript": "^4.6.4",
     "vite": "^3.0.7",
+    "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-mock": "^2.9.6",
+    "vue-eslint-parser": "^9.1.0",
     "vue-tsc": "^0.39.5"
   }
 }
