--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
-VITE_HOST = 'http://127.0.0.1:3000'
+VITE_HOST= localhost:3000
 VITE_WS = 'ws//:127.0.0.1:3000'
 VITE_MOCK_STATE = false
 VITE_ENVIRONMENT = server
