--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@vueuse/components": "^9.3.0",
     "@vueuse/core": "^9.3.0",
     "@vueuse/math": "^9.3.0",
+    "@wangeditor/editor": "^5.1.23",
+    "@wangeditor/editor-for-vue": "^5.1.12",
     "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.5",
     "axios": "^0.27.2",
