--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@wangeditor/editor": "^5.1.23",
     "@wangeditor/editor-for-vue": "^5.1.12",
     "animate.css": "^4.1.1",
+    "ant-design-vue": "^3.2.15",
     "autoprefixer": "^10.4.5",
     "axios": "^0.27.2",
     "element-plus": "^2.2.15",
