--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@amap/amap-jsapi-loader": "^1.0.1",
     "@types/file-saver": "^2.0.5",
+    "@vitejs/plugin-vue-jsx": "^3.0.1",
     "@vueuse/components": "^9.3.0",
     "@vueuse/core": "^9.3.0",
     "@vueuse/math": "^9.3.0",
