--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
     "lib": [
       "ESNext",
       "DOM",
-      "WebWorker"
+      "WebWorker",
+      "dom.iterable"
     ],
     "skipLibCheck": true,
     "baseUrl": ".",
